# not-question-code-smells

./: .gitignore  README.md
.github/: pull_request_template.md
code-smells-1/: .env.example  README.md  docker-compose.yml  pyproject.toml
code-smells-1/.github/workflows/: deploy-production.yml  deploy-staging.yml
code-smells-1/app/: db.py  main.py  tracking.py
code-smells-1/app/api/: routes.py
code-smells-1/app/models/: __init__.py  chat.py  comment.py  order.py  post.py  product.py
code-smells-2/: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
code-smells-2/components/: ProjectsPanel.vue  UserCard.vue  UsersPanel.vue
code-smells-2/composables/: useUserList.ts
code-smells-2/helpers/: client.ts
code-smells-2/lib/: queryCache.ts  useProjectList.ts
code-smells-2/misc/: useProjectList.ts
code-smells-2/pages/: dashboard.vue  index.vue  users.vue
code-smells-3/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
code-smells-3/.github/workflows/: deploy-production.yml  deploy-staging.yml
code-smells-3/app/: db.py  exceptions.py  main.py  settings.py
code-smells-3/app/api/: chat.py
code-smells-3/app/domain/llm/: __init__.py  base.py  factory.py  file_part.py  openai_provider.py  service.py
code-smells-3/app/models/: __init__.py  chat.py
code-smells-3/app/repositories/: chat_repository.py
code-smells-3/app/schemas/: __init__.py  chat_requests.py  chat_responses.py  health.py
code-smells-3/app/services/: chat_application_service.py  chat_domain_service.py
(+11 files in other folders)
