[project]
name = "catalog-api"
version = "0.1.0"
description = "Catalog and orders API (FastAPI + Beanie)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.13,<3",
    "beanie>=1.27.0",
    "motor>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
