[project]
name = "social-promo-api"
version = "0.1.0"
description = "Social posts & chat API (FastAPI + Beanie + MongoDB)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.13,<3",
    "beanie>=1.27.0",
    "motor>=3.6.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
